@@ -490,6 +490,16 @@ PUBLIC_FUNC(int) PokeySound_Generate(P(ASAP_State PTR) ast, P(byte ARRAY) buffer
 	else
 		blocks = samples - i;
 	for (; i < samples; i++) {
+#ifdef ACTIONSCRIPT
+		acc_left += ast _ base_pokey.delta_buffer[i] - (acc_left * 3 >> 10);
+		var sample : Number = acc_left / 33553408;
+		buffer.writeFloat(sample);
+		if (ast.extra_pokey_mask != 0) {
+			acc_right += ast _ extra_pokey.delta_buffer[i] - (acc_right * 3 >> 10);
+			sample = acc_right / 33553408;
+		}
+		buffer.writeFloat(sample);
+#else
 		int sample;
 		acc_left += ast _ base_pokey.delta_buffer[i] - (acc_left * 3 >> 10);
 		sample = acc_left >> 10;
@@ -517,6 +527,7 @@ PUBLIC_FUNC(int) PokeySound_Generate(P(ASAP_State PTR) ast, P(byte ARRAY) buffer
 			sample = acc_right >> 10;
 			STORE_SAMPLE;
 		}
+#endif /* ACTIONSCRIPT */
 	}
 	if (i == ast _ samples) {
 		acc_left += ast _ base_pokey.delta_buffer[i];
