@@ -26,10 +26,15 @@
 
 #include "anylang.h"
 
-#ifdef JAVA
+#ifndef C
 
 #define ASAP_SONGS_MAX          32
 #define ASAP_SAMPLE_RATE        44100
+
+#endif
+
+#ifdef JAVA
+
 #define ASAP_FORMAT_U8          8
 #define ASAP_FORMAT_S16_LE      16
 #define ASAP_FORMAT_S16_BE      -16
@@ -38,14 +43,16 @@
 
 #elif defined(CSHARP) || defined(JAVASCRIPT)
 
-#define ASAP_SONGS_MAX          32
-#define ASAP_SAMPLE_RATE        44100
 #define ASAP_FORMAT_U8          ASAP_SampleFormat.U8
 #define ASAP_FORMAT_S16_LE      ASAP_SampleFormat.S16LE
 #define ASAP_FORMAT_S16_BE      ASAP_SampleFormat.S16BE
 #ifdef CSHARP
 #define ASAP_ParseDuration      ParseDuration
 #endif
+
+#elif defined(ACTIONSCRIPT)
+
+#define ASAP_ParseDuration      parseDuration
 
 #else /* C */
 
